--- a/Graph.vcxproj
+++ b/Graph.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="test.h" />
     <ClInclude Include="AdjacencyMultiList.h" />
+    <ClInclude Include="Network.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
