--- a/Graph.vcxproj.filters
+++ b/Graph.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="AdjacencyMultiList.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Network.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
