--- a/Graph.vcxproj
+++ b/Graph.vcxproj
@@ -142,6 +142,8 @@
     <ClCompile Include="Graph.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BenchMark.h" />
+    <ClInclude Include="MinimumSpanningTree.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="AdjacencyMultiList.h" />
     <ClInclude Include="Network.h" />
