--- a/Graph.vcxproj.filters
+++ b/Graph.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="Network.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MinimumSpanningTree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="BenchMark.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
