--- a/Graph.vcxproj.filters
+++ b/Graph.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="BenchMark.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="UnionFind.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
