--- a/Graph.vcxproj.filters
+++ b/Graph.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="UnionFind.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="ShortestPath.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
