--- a/Graph.vcxproj
+++ b/Graph.vcxproj
@@ -150,6 +150,9 @@
     <ClInclude Include="Network.h" />
     <ClInclude Include="UnionFind.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
